--- a/package.json
+++ b/package.json
@@ -16,6 +16,12 @@
         "lodash": "^4.17.13",
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.15.2",
-        "sass-loader": "^8.0.0"
+        "sass-loader": "^8.0.0",
+        "vue-template-compiler": "^2.6.11"
+    },
+    "dependencies": {
+        "copy-webpack-plugin": "^5.0.4",
+        "imagemin-mozjpeg": "^8.0.0",
+        "imagemin-webpack-plugin": "^2.4.2"
     }
 }
