--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,7 @@ Homestead.yaml
 npm-debug.log
 yarn-error.log
 /.idea
+/public/assets/
+/public/mix-manifest.json
+/package-lock.json
+/resources/assets/scss/build/
